references in radon article

--- a/skript/anwendungen.tex
+++ b/skript/anwendungen.tex
@@ -1,4 +1,5 @@
 \chapter*{"Ubersicht}
+\begin{refsection}
 Im zweiten Teil werden Anwendungsbeispiele aus der HPC-Welt gezeigt.
 Eigentliche rechnerische L"osungen stehen hier neben mathematischen
 "Uberlegungen, wie man ein Problem der L"osung mit leistungsf"ahiger
@@ -87,3 +88,6 @@ wenngleich mit anderer ``Technologie'' als unsere heutigen HPC Cluster.
 \caption{Von Lewis Fry Richardson erdachte Vision einer Forecast-Factory
 \label{forecastfactory}}
 \end{figure}
+
+\printbibliography[heading=subbibliography]
+\end{refsection}
