--- a/skript/radon/sections/Einleitung.tex
+++ b/skript/radon/sections/Einleitung.tex
@@ -10,15 +10,12 @@ der gegen"uberliegenden Seite ausgewertet. Durch Rotation wird so jeder
 Punkt aus einer Scheibe des K"orpers erfasst. Die dadurch anfallenden
 Daten entsprechen der Radontransformation einer Scheibe des K"orpers
 und k"onnen so mit Hilfe der R"ucktransformation wieder in ein Bild
-transformiert werden.
-
-%\cite{wikiRadontransform}
+transformiert werden
+\cite{wikiRadontransform}.
 
 \begin{figure}[ht!]\centering
 	\begin{adjustbox}{scale=0.5, keepaspectratio}
 		\includegraphics{radon/images/tomograph.jpg}
 	\end{adjustbox}
-	\caption{Computertomograph}
+	\caption{Computertomograph \cite{computertomographBild}}
 \end{figure}
-\FloatBarrier
-%\cite{computertomographBild}
