--- a/skript/references.bib
+++ b/skript/references.bib
@@ -30,7 +30,7 @@
 	language = {english},
 }
 
-@url{skript:opencl,
+@online{skript:opencl,
 	title = {OpenCL Registry},
 	author = {Khronos Group},
 	URL = {https://www.khronos.org/registry/cl/}
@@ -55,15 +55,6 @@
 @book{skript:linalg,
 	author = {Andreas M"uller},
 	title = {Lineare Algebra},
-	subtitle = {Skript zur Vorlesung an der HSR},
 	year = {2013},
 	language = {german}
-}
-
-@book{skript:richardson,
-	author = {Peter Lynch},
-	title = {The Emergence of Numerical Weather Prediction: Richardson's dream},
-	language = {english},
-	year = {2006},
-	publisher = {Cambridge University Press}
 }
