--- a/skript/skript.tex
+++ b/skript/skript.tex
@@ -58,6 +58,7 @@
 \usepackage{standalone}
 \usepackage[backend=bibtex]{biblatex}
 \addbibresource{references.bib}
+\addbibresource{uebersicht.bib}
 \addbibresource{sample/sample.bib}
 \addbibresource{radon/RadonBack.bib}
 \addbibresource{julia/julia.bib}
