symmetrischer Gauss-Seidel, Bilder hinzugefügt

--- a/skript/potential/potential.tex
+++ b/skript/potential/potential.tex
@@ -304,18 +304,18 @@ sich mit dem symmetrischen Gauss-Seidel-Algorithmus beheben
 sich ein "ahnliches Bild wie beim Jacobi-Algorithmus, welches
 schneller divergiert. 
 
-%\begin{figure}
-%\centering 
-%\subfigure{\includegraphics[width=0.2\hsize]{potential/images/sgs/0.jpg}}\quad 
-%\subfigure{\includegraphics[width=0.2\hsize]{potential/images/sgs/1.jpg}}\quad 
-%\subfigure{\includegraphics[width=0.2\hsize]{potential/images/sgs/2.jpg}} 
-%\centering 
-%\subfigure{\includegraphics[width=0.2\hsize]{potential/images/sgs/3.jpg}}\quad 
-%\subfigure{\includegraphics[width=0.2\hsize]{potential/images/sgs/4.jpg}}\quad 
-%\subfigure{\includegraphics[width=0.2\hsize]{potential/images/sgs/5.jpg}} 
-%\caption{Ausgangsbild und die ersten f"unf Iterationsschritte beim
-%symmetrischen Gauss-Seidel-Algorithmus} 
-%\end{figure}
+\begin{figure}
+\centering 
+\subfigure{\includegraphics[width=0.2\hsize]{potential/images/sgs/0.jpg}}\quad 
+\subfigure{\includegraphics[width=0.2\hsize]{potential/images/sgs/1.jpg}}\quad 
+\subfigure{\includegraphics[width=0.2\hsize]{potential/images/sgs/2.jpg}} 
+\centering 
+\subfigure{\includegraphics[width=0.2\hsize]{potential/images/sgs/3.jpg}}\quad 
+\subfigure{\includegraphics[width=0.2\hsize]{potential/images/sgs/4.jpg}}\quad 
+\subfigure{\includegraphics[width=0.2\hsize]{potential/images/sgs/5.jpg}} 
+\caption{Ausgangsbild und die ersten f"unf Iterationsschritte beim
+symmetrischen Gauss-Seidel-Algorithmus} 
+\end{figure}
 
 \subsection{Konvergenz}
 F"ur die Ausf"uhrung des Codes kommt es nicht darauf an, welcher
