Kugelsternhaufen hinzugefuegt, Potential

--- a/skript/skript.tex
+++ b/skript/skript.tex
@@ -61,6 +61,7 @@
 \addbibresource{uebersicht.bib}
 \addbibresource{sample/sample.bib}
 \addbibresource{radon/RadonBack.bib}
+\addbibresource{kugel/kugel.bib}
 \addbibresource{julia/julia.bib}
 \addbibresource{apfel/apfelmaennchen.bib}
 \addbibresource{mapreduce/map.bib}
@@ -188,6 +189,7 @@ Hochschule f"ur Technik, Rapperswil, 2014
 \input anwendungen.tex
 %\input sample/sample.tex
 \input radon/RadonBack.tex
+\input kugel/Kugelsternhaufen.tex
 \input julia/julia.tex
 \input apfel/apfelmaennchenInput.tex
 \input mapreduce/mapreduce.tex
