Korrekturen Apfelmaennchen-Beitrag

--- a/skript/skript.tex
+++ b/skript/skript.tex
@@ -38,6 +38,7 @@
 %\usetikzlibrary{decorations.pathreplacing}
 %\usetikzlibrary{patterns}
 \usepackage{siunitx}
+\usepackage{tabularx}
 \usepackage{listings}
 \lstdefinestyle{Matlab}{
   numbers=left,
