--- a/skript/crypto/crypto.bib
+++ b/skript/crypto/crypto.bib
@@ -40,3 +40,26 @@
 	url={http://www.nvidia.com/content/cudazone/CUDABrowser/downloads/papers/NVIDIA_OpenCL_BestPracticesGuide.pdf},
 	urldate={2014-05-26}
 }
+
+@online{crypto:md5_impl,
+	title={A portable, fast, and free implementation of the MD5 Message-Digest Algorithm},
+	author={Alexander Peslyak},
+	organization={Openwall},
+	year={2001},
+	url={http://openwall.info/wiki/people/solar/software/public-domain-source-code/md5},
+	urldate={2014-06-26}
+}
+
+@online{crypto:pyopencl_docs,
+	title={PyOpenCL Documentation},
+	author={Andreas Kloeckner},
+	url={http://documen.tician.de/pyopencl/},
+	urldate={2014-06-26}
+}
+
+@online{crypto:python,
+	title={The Python Programming Language},
+	organization={Python Software Foundation},
+	url={https://www.python.org/},
+	urldate={2014-06-26}
+}
