--- a/skript/skript.tex
+++ b/skript/skript.tex
@@ -66,6 +66,7 @@
 \addbibresource{julia/julia.bib}
 \addbibresource{apfel/apfelmaennchen.bib}
 \addbibresource{mapreduce/map.bib}
+\addbibresource{montecarlo/MonteCarlo.bib}
 \addbibresource{green/quellen.bib}
 \addbibresource{stosswellen/stoss.bib}
 \AtEndDocument{\clearpage\ifodd\value{page}\else\null\clearpage\fi}
@@ -194,6 +195,7 @@ Hochschule f"ur Technik, Rapperswil, 2014
 \input julia/julia.tex
 \input apfel/apfelmaennchenInput.tex
 \input mapreduce/mapreduce.tex
+\input montecarlo/MonteCarlo.tex
 \input heat/heat.tex
 \input potential/potential.tex
 \input green/green.tex
